# SnakeMaze

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md
src/: main.cpp
src/ai/: AIController.cpp  AIController.h  AStarPathfinder.cpp  AStarPathfinder.h  DijkstraPathfinder.cpp  DijkstraPathfinder.h  EasyAI.h  MediumAI.h
src/core/: GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h  MazeGenerator.cpp  MazeGenerator.h  PowerUp.cpp  PowerUp.h  Snake.cpp  Snake.h
src/ui/: DifficultyScreen.qml  GameOverScreen.qml  GameScreen.qml  HUDOverlay.qml  Main.qml  MenuScreen.qml
src/ui/components/: AnimatedButton.qml  DifficultyCard.qml  MazeRenderer.qml  ParticleEffect.qml  PowerUpItem.qml  ScorePanel.qml  SnakeRenderer.qml
